<resources>
    <string name="app_name" translatable="false">bossCheck</string>
    <string name="txt_corrupcao">Corrupção</string>
    <string name="txt_crimson">Carmin</string>
    <string name="txt_escolha">Selecione qual bioma maléfico você escolheu e vamos iniciar.</string>
    <string name="txt_preh">Pré-Modo Difícil</string>
    <string name="txt_slime">Geleia Rei</string>
    <string name="txt_eye">Olho de Cthulhu</string>
    <string name="txt_mundos">Devorador de Mundos</string>
    <string name="txt_cerebro">Cérebro de Cthulhu</string>
    <string name="txt_abelha">Abelha Rainha</string>
    <string name="txt_esqueleto">Esqueletron</string>
    <string name="txt_cervo">Cervoclope</string>
    <string name="txt_parede">Parede de Carne</string>
    <string name="txt_eventos">Eventos</string>
    <string name="txt_lua">Lua de Sangue</string>
    <string name="txt_goblin">Exército Goblin</string>
    <string name="txt_anciao">Exército do Ancião</string>
    <string name="txt_tocha">O Deus da Tocha</string>
    <string name="txt_geleia">Geleia Rainha</string>
    <string name="txt_gemeos">Os Gêmeos</string>
    <string name="txt_alfa">Esqueletron Alfa</string>
    <string name="txt_planta">Plantera</string>
    <string name="txt_luz">Imperatiz da Luz</string>
    <string name="txt_golem">Golem</string>
    <string name="txt_duque">Duque Peixe-Dragão</string>
    <string name="txt_cultista">Cultista Lunático</string>
    <string name="txt_lord">Senhor da Lua</string>
    <string name="txt_destruidor">O Destruidor</string>
    <string name="txt_eclipse">Eclipse Solar</string>
    <string name="txt_pirata">Invasão Pirata</string>
    <string name="txt_marte">Loucura de Marte</string>
    <string name="txt_legiao">Legião Congelada</string>
    <string name="txt_abobora">Lua de Abóbora</string>
    <string name="txt_congelada">Lua Congelada</string>
    <string name="txt_hard">Modo Difícil</string>
    <string name="txt_classico">Clássico</string>
    <string name="txt_perito">Perito</string>
    <string name="txt_mestre">Mestre</string>
    <!-- Strings used for fragments for navigation -->

</resources>