<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundred"
    android:orientation="vertical"

    tools:context=".preHardCa">

    <Button
        android:id="@+id/btnCa10"
        android:layout_width="65dp"
        android:layout_height="54dp"

        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/vazio"
        android:fontFamily="@font/terrariafont"
        android:onClick="volta"
        android:text=" "
        android:textAlignment="viewStart"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCa2"
        android:layout_width="65dp"
        android:layout_height="54dp"

        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/vazio"
        android:fontFamily="@font/terrariafont"
        android:onClick="hard"
        android:text=" "
        android:textAlignment="viewStart"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnCa4"
        android:layout_width="142dp"
        android:layout_height="51dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/vazio"
        android:fontFamily="@font/terrariafont"
        android:onClick="slime"
        android:text="@string/txt_slime"
        android:textAlignment="viewStart"
        android:textColor="#454545"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/btnca5"
        android:layout_width="132dp"
        android:layout_height="46dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/vazio"
        android:onClick="sangue"
        android:text=" "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

<!--    fim do Button e começo do TextView-->

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="56dp"
        android:layout_height="43dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:rotationY="-180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/buttonback" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="82dp"
        android:layout_marginBottom="275dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/title" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="411dp"
        android:layout_height="99dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/title" />

    <ImageView
        android:id="@+id/imageView51"
        android:layout_width="56dp"
        android:layout_height="43dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/buttonback" />

<!--    fim do ImageView e começo do TextView-->

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginBottom="280dp"
        android:fontFamily="@font/terrariafont"
        android:text="@string/txt_eventos"
        android:textColor="#272727"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/terrariafont"
        android:text="@string/txt_preh"
        android:textAlignment="center"
        android:textColor="#272727"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

<!--    fim do textView e começo do CheckBox-->

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/terrariafont"
        android:text="@string/txt_goblin"
        android:textColor="#454545"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/terrariafont"
        android:text="@string/txt_lua"
        android:textColor="#454545"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <CheckBox
        android:id="@+id/checkBox11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/terrariafont"
        android:text="@string/txt_anciao"
        android:textColor="#454545"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <CheckBox
        android:id="@+id/checkBox9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/terrariafont"
        android:text="@string/txt_tocha"
        android:textColor="#454545"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox11" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="34dp"
        android:layout_height="47dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/terrariafont"
        android:textColor="#454545"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/terrariafont"
        android:text="@string/txt_eye"
        android:textColor="#454545"
        android:textSize="20sp"
        app:buttonIconTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/terrariafont"
        android:text="@string/txt_cerebro"
        android:textColor="#454545"
        android:textSize="20sp"
        app:buttonIconTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/terrariafont"
        android:text="@string/txt_esqueleto"
        android:textColor="#454545"
        android:textSize="20sp"
        app:buttonIconTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox10" />

    <CheckBox
        android:id="@+id/checkBox12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/terrariafont"
        android:text="@string/txt_parede"
        android:textColor="#454545"
        android:textSize="20sp"
        app:buttonIconTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/terrariafont"
        android:text="@string/txt_abelha"
        android:textColor="#454545"
        android:textSize="20sp"
        app:buttonIconTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <CheckBox
        android:id="@+id/checkBox10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/terrariafont"
        android:text="@string/txt_cervo"
        android:textColor="#454545"
        android:textSize="20sp"
        app:buttonIconTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox7" />

    <!--fim do codigo-->


</androidx.constraintlayout.widget.ConstraintLayout>